PROXY_IS_INTERCEPT にてBurpの古いバージョン対応